--- a/templates/Students/list.html
+++ b/templates/Students/list.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List of Students</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-</head>
-<body class="p-4">
+{% extends "Home/index.html" %}  <!-- Replace with the actual filename of your parent template -->
+
+{% block title %}List of Students{% endblock %}
+
+{% block content %}
+<div class="p-4">
     <h1 class="text-center mb-4">List of Students</h1>
 
     <table class="table table-striped table-bordered">
@@ -47,5 +44,5 @@
     <form action="/Student_management" method="GET">
         <button type="submit" class="btn btn-primary mt-4">Go to Student Management</button>
     </form>
-</body>
-</html>
+</div>
+{% endblock %}
