--- a/templates/Home/login.html
+++ b/templates/Home/login.html
@@ -16,7 +16,7 @@
                         <h3>Login</h3>
                     </div>
                     <div class="card-body">
-                        <form action="/login" method="POST">
+                        <form action="/Authentication/login" method="POST">
                             <div class="mb-3">
                                 <label for="U" class="form-label">Username</label>
                                 <input type="text" id="U" name="U" class="form-control" required>
