--- a/templates/Students/Mod.html
+++ b/templates/Students/Mod.html
@@ -6,7 +6,7 @@
 <div class="main-content" style="margin-left: 20px;"> <!-- Adjust the margin value as needed -->
     <h1 class="page-title">Modify Student</h1>
     <p class="text-center">Please complete the form below to update the student's details.</p>
-    <form method="POST" action="/Student_management/ModSTD" class="shadow-lg p-4 rounded bg-white">
+    <form method="POST" action="/Student/ModSTD" class="shadow-lg p-4 rounded bg-white">
         <!-- Massar ID -->
         <div class="mb-3">
             <label for="massar_id" class="form-label">Massar ID</label>
