--- a/templates/Students/Search.html
+++ b/templates/Students/Search.html
@@ -29,7 +29,7 @@
                 {% endif %}
             </div>
             <div class="card-footer text-center">
-                <a href="/Student_management" class="btn btn-primary">Back to Student Management</a>
+                <a href="/Student/Student_management" class="btn btn-primary">Back to Student Management</a>
             </div>
         </div>
     </div>
