--- a/templates/Students/list.html
+++ b/templates/Students/list.html
@@ -41,7 +41,7 @@
         </tbody>
     </table>
 
-    <form action="/Student_management" method="GET">
+    <form action="/Student/Student_management" method="GET">
         <button type="submit" class="btn btn-primary mt-4">Go to Student Management</button>
     </form>
 </div>
