Setting Authorization For Admins,Teachers,Students

--- a/templates/Home/index.html
+++ b/templates/Home/index.html
@@ -255,7 +255,7 @@
         <a href="/" class="sidebar-link"><i class="bi bi-house"></i> Home</a>
         <a href="/Student/Student_management" class="sidebar-link"><i class="bi bi-mortarboard"></i> Students Management</a>
         <a href="/Teacher/Teachers_management" class="sidebar-link"><i class="bi bi-person-workspace"></i> Teachers Management</a>
-        <a href="/Direction" class="sidebar-link"><i class="bi bi-building"></i> Direction</a>
+        <a href="/Administration/Home" class="sidebar-link"><i class="bi bi-building"></i> Administration</a>
         <a href="/Info/About" class="sidebar-link"><i class="bi bi-info-circle"></i> About Us</a>
         <a href="/Info/Contact" class="sidebar-link"><i class="bi bi-envelope"></i> Contact Us</a>
         <a href="/Authentication/Logout" class="sidebar-link"><i class="bi bi-box-arrow-right"></i> Logout</a>
@@ -280,9 +280,9 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <form action="/Direction">
+                        <form action="/Administration/Home">
                             <button type="submit" class="btn btn-info btn-custom w-100">
-                                <i class="bi bi-building me-2"></i>Direction
+                                <i class="bi bi-building me-2"></i>Administration
                             </button>
                         </form>
                     </div>
