--- a/templates/Home/index.html
+++ b/templates/Home/index.html
@@ -210,6 +210,7 @@
         <div class="logo-area">
             Abderrahman Ibn Ghazala
         </div>
+        {% if session['who'] == "Admin" %}
         <div class="notification-area ms-auto">
             <div class="dropdown">
                 <button class="btn btn-outline-secondary position-relative dropdown-toggle" id="notification-button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -244,6 +245,7 @@
                 </ul>                
             </div>
         </div>
+        {% endif %}
     </nav>
 
 
@@ -252,10 +254,16 @@
 
     <!-- Sidebar -->
     <div class="sidebar" id="sidebar">
+        {% if session['who'] == "Admin" %}
         <a href="/" class="sidebar-link"><i class="bi bi-house"></i> Home</a>
+        {% endif %}
+        {% if session['who'] == "Teacher" or session['who'] == "Admin" %}
         <a href="/Student/Student_management" class="sidebar-link"><i class="bi bi-mortarboard"></i> Students Management</a>
+        {% endif %}
+        {% if session['who'] == "Admin" %}
         <a href="/Teacher/Teachers_management" class="sidebar-link"><i class="bi bi-person-workspace"></i> Teachers Management</a>
         <a href="/Administration/Home" class="sidebar-link"><i class="bi bi-building"></i> Administration</a>
+        {% endif %}
         <a href="/Info/About" class="sidebar-link"><i class="bi bi-info-circle"></i> About Us</a>
         <a href="/Info/Contact" class="sidebar-link"><i class="bi bi-envelope"></i> Contact Us</a>
         <a href="/Authentication/Logout" class="sidebar-link"><i class="bi bi-box-arrow-right"></i> Logout</a>
